src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>rC_Connect__Check_Inventory_Levels__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, then any awards will be checked against inventory levels, if the inventory levels become less than 0, the award will fail. Uncheck to allow the award of items when no inventory is available.</description>
        <label>Check Inventory Levels @Deprecated(2.1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Acknowledgement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the receiver need to acknowledge receipt of this item?</description>
        <inlineHelpText>Does the receiver need to acknowledge receipt of this item?</inlineHelpText>
        <label>Acknowledgement Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Affiliation__c</fullName>
        <description>Manualy populated, this field indicates the Affiliation using this &quot;Item/Package&quot;.</description>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Charge_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether shipping is being charged.</description>
        <inlineHelpText>This indicates whether shipping is being charged.</inlineHelpText>
        <label>Charge Shipping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Copy_Status__c</fullName>
        <description>What is the status of the copy for this Premium? Used in generation of script to help pitch item/package to donor (Pitcher Script)</description>
        <inlineHelpText>What is the status of the copy for this Premium? Used in generation of script to help pitch item/package to donor (Pitcher Script)</inlineHelpText>
        <label>Copy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Need Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy on Its Way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info/Copy on-Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Proofed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Printed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Copy_Summary__c</fullName>
        <description>Short summary of the copy. Used in generation of script to help pitch item/package to donor (Pitcher Script)</description>
        <inlineHelpText>Short summary of the copy. Used in generation of script to help pitch item/package to donor (Pitcher Script)</inlineHelpText>
        <label>Copy Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Copy_Text__c</fullName>
        <description>Full text of copy. Used in generation of script to help pitch item/package to donor (Pitcher Script)</description>
        <inlineHelpText>Full text of copy. Used in generation of script to help pitch item/package to donor (Pitcher Script)</inlineHelpText>
        <label>Copy Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Delivery_Method__c</fullName>
        <description>Manually populated field indicating the method used to deliver a giving item.</description>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Call</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Display_Order__c</fullName>
        <description>Allows you to choose order of visual display for items of the same type (e.g. T-Shirt: S,M,L,XL)</description>
        <inlineHelpText>Allows you to choose order of visual display for items of the same type (e.g. T-Shirt: S,M,L,XL)</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__End_Date__c</fullName>
        <description>End date of premium availability</description>
        <inlineHelpText>End date of premium availability</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__FMV__c</fullName>
        <description>Fair Market Value</description>
        <inlineHelpText>Fair Market Value</inlineHelpText>
        <label>FMV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Freight_Cost__c</fullName>
        <description>Cost to us of shipping item from supplier to inventory storage location.</description>
        <inlineHelpText>Cost to us of shipping item from supplier to inventory storage location.</inlineHelpText>
        <label>Freight Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Fulfilment_Details__c</fullName>
        <description>Restrictions/Instructions for Item ordering. e.g. Must be ordered in multiples of 10.</description>
        <inlineHelpText>Restrictions/Instructions for Item ordering. e.g. Must be ordered in multiples of 10.</inlineHelpText>
        <label>Fulfilment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Full_Description__c</fullName>
        <description>This is what follows the &quot;For a donation of:&quot; header on the Pitcher Script.</description>
        <inlineHelpText>This is what follows the &quot;For a donation of:&quot; header on the Pitcher Script.</inlineHelpText>
        <label>Full Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__ISBN__c</fullName>
        <description>&quot;Manually populated field displaying the |
International Standard Book Number (ISBN) is a unique numeric commercial book identifier based upon the 9-digit Standard Book Numbering (SBN)</description>
        <label>ISBN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Image_FileName__c</fullName>
        <description>Location of image file used in generation of image url</description>
        <inlineHelpText>Location of image file used in generation of image url</inlineHelpText>
        <label>Image FileName</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Image_URL_For_Thumbnail__c</fullName>
        <description>Manually populated, this field contqins the location of Image Thumbnail file.</description>
        <label>Image URL For Thumbnail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Image_URL__c</fullName>
        <description>Location of Image file</description>
        <formula>/*pub image format https://c.na7.content.force.com/servlet/servlet.ImageServer?id=015A0000001RkhLIAS&amp;oid=00DA00000009dls */
IF(LEN(rC_Giving__Image_FileName__c) &gt; 0,
&quot;https://c.na7.content.force.com/servlet/servlet.ImageServer?id=&quot; &amp; rC_Giving__Image_FileName__c &amp; &quot;&amp;oid=00DA00000009dls&quot;,
&apos;No Image&apos;)</formula>
        <inlineHelpText>Location of Image file</inlineHelpText>
        <label>Image URL (@Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Inventory_Location__c</fullName>
        <description>Warehouse location of items.</description>
        <inlineHelpText>Warehouse location of items.</inlineHelpText>
        <label>Inventory Location</label>
        <picklist>
            <picklistValues>
                <fullName>Location A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Inventory_Type__c</fullName>
        <description>Manually populated, this picklist alows you to indicate an &quot;Inventory Rype.&quot;  &apos;Standard Inventory,&apos; &apos;Direct Shipped&apos; etc.</description>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct / Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Item_Category__c</fullName>
        <description>Manually populated, this field is dependent on &quot;Item Family&quot; and describes the Type of Item:</description>
        <label>Item Category</label>
        <picklist>
            <controllingField>Family</controllingField>
            <picklistValues>
                <fullName>Blu-Ray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book - Hardback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book - Paperback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Invitation Only Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination Gift Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hats and Caps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-packaged Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming Tune In Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Limits__c</fullName>
        <description>What limits relate to this Premium?</description>
        <inlineHelpText>What limits relate to this Premium?</inlineHelpText>
        <label>Limits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__List_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a list Premium (i.e. a will-call item)?</description>
        <inlineHelpText>Is this a list Premium (i.e. a will-call item)?</inlineHelpText>
        <label>List Items?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Mobile_Description__c</fullName>
        <description>Description of Premium to be displayed on mobile devices</description>
        <inlineHelpText>Description of Premium to be displayed on mobile devices</inlineHelpText>
        <label>Mobile Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Mobile_Title__c</fullName>
        <description>Item heading for mobile devices</description>
        <inlineHelpText>Item heading for mobile devices</inlineHelpText>
        <label>Mobile Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__No_Confirmation_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Drive Premiums. In the case where a particular premium should not receive a confirmation letter.</description>
        <inlineHelpText>Should a confirmation letter be sent for this Premium?</inlineHelpText>
        <label>No Confirmation Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Not_available_individually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Item must be included in package.</description>
        <inlineHelpText>Item must be included in package.</inlineHelpText>
        <label>Not available individually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Parent_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated lookup to a &quot;Parent Item&quot; record.</description>
        <label>Parent Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sub-items</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pronunciation__c</fullName>
        <description>How do you pronounce any key aspects of this Premium?</description>
        <inlineHelpText>How do you pronounce any key aspects of this Premium?</inlineHelpText>
        <label>Pronunciation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Qualifying_Payment_Method__c</fullName>
        <description>This Premium is available with only the chosen Payment Method(s).</description>
        <inlineHelpText>This Premium is available with only the chosen Payment Method(s).</inlineHelpText>
        <label>Qualifying Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Funds Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCoupons</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Secondary_Location__c</fullName>
        <description>Location of additional inventory</description>
        <inlineHelpText>Location of additional inventory</inlineHelpText>
        <label>Secondary Location</label>
        <picklist>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House - Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House - Cage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House - Premium Closet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Shipping_Charge__c</fullName>
        <description>Amount to charge donor for shipping</description>
        <inlineHelpText>Amount to charge donor for shipping</inlineHelpText>
        <label>Shipping Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Shipping_and_Handling_Cost__c</fullName>
        <description>Cost to us of shipping (and handling) item to donor</description>
        <inlineHelpText>Cost to us of shipping (and handling) item to donor</inlineHelpText>
        <label>Shipping &amp; Handling Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Special_Notes__c</fullName>
        <description>Manually populated, this field records comments or notes about the Item or Package.</description>
        <label>Special Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Start_Date__c</fullName>
        <description>Date Package/Item is available from</description>
        <inlineHelpText>Date Package/Item is available from</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Thumbnail_Image__c</fullName>
        <description>Populated by Formula, displays a &quot;Thumbnail Image&quot; of the Item.</description>
        <formula>IF(NOT(ISBLANK(rC_Giving__Image_URL_For_Thumbnail__c)), IMAGE(rC_Giving__Image_URL_For_Thumbnail__c,&quot;Thumbnail&quot;,256,256), &quot;URL Not Found&quot; )</formula>
        <label>Thumbnail Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Ticket_Date__c</fullName>
        <description>Used for Drive Premium Ticket Giveaways - i.e. on what day is the event occurring for which the ticket is valid?</description>
        <inlineHelpText>Used for Drive Premium Ticket Giveaways - i.e. on what day is the event occurring for which the ticket is valid?</inlineHelpText>
        <label>Ticket Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__UPC__c</fullName>
        <description>Universal Product Code</description>
        <inlineHelpText>Universal Product Code</inlineHelpText>
        <label>UPC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Unit_Cost__c</fullName>
        <description>Manually populated, displays the &quot;Unit Cost&quot; of an Item.</description>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Vendor_Reference_Number__c</fullName>
        <description>Code/Number that vendor uses to refer to Item</description>
        <inlineHelpText>Code/Number that vendor uses to refer to Item</inlineHelpText>
        <label>Vendor Reference #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup for Vendor / Underwriter.</description>
        <inlineHelpText>This is lookup for Vendor / Underwriter.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>ProductsOffered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Check_Inventory_Levels__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Used to check inventory if item can be awarded. To award item when no inventory is available, uncheck field.</inlineHelpText>
        <label>Check Inventory Levels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Available__c</fullName>
        <description>Auto-calculated based upon other inventory fields.</description>
        <formula>rC_Inventory__Inventory_Received__c +  rC_Inventory__Inventory_Returned__c + rC_Inventory__Inventory_Override__c - (rC_Inventory__Inventory_Sold__c  + rC_Inventory__Inventory_Shipped__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_On_Hand__c</fullName>
        <description>The amount of inventory current in stock plus ordered</description>
        <formula>(  rC_Inventory__Inventory_Received__c +  rC_Inventory__Inventory_Returned__c +  rC_Inventory__Inventory_Override__c ) -  rC_Inventory__Inventory_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_On_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>No action defined, Inventory is held for future changes.</inlineHelpText>
        <label>Inventory  On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Ordered__c</fullName>
        <label>Inventory Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Override__c</fullName>
        <inlineHelpText>Used to override inventory quantity. Add a positive number to increase quantity available or add a negative number to decrease quantity available.</inlineHelpText>
        <label>Inventory Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Received__c</fullName>
        <label>Inventory Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Returned__c</fullName>
        <label>Inventory Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Shipped__c</fullName>
        <label>Inventory Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Sold__c</fullName>
        <label>Inventory Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>rC_Giving__Item</fullName>
        <active>true</active>
        <description>Premium type representing a single benefit (e.g. a CD)</description>
        <label>Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Giving__Package</fullName>
        <active>true</active>
        <description>Premium type representing a group of benefits</description>
        <label>Package</label>
    </recordTypes>
</CustomObject>